--- a/Crystallum/UI/MainWindow.xaml
+++ b/Crystallum/UI/MainWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Crystallum"
         xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="Crystallum.MainWindow"
-        mc:Ignorable="d" Height="390" Width="235" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        mc:Ignorable="d" Height="430" Width="265" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid Margin="0">
-        <Button x:Name="generateProgramButton" Content="Generate" HorizontalAlignment="Left" Margin="10,323,0,0" VerticalAlignment="Top" Width="102" Click="onGenerateProgramButtonClick" Height="28"/>
-        <Button x:Name="saveButton" Content="Save" HorizontalAlignment="Left" Margin="117,323,0,0" VerticalAlignment="Top" Width="102" Height="28" Click="onSaveButtonClick"/>
-        <TextBox x:Name="programTextBox" HorizontalAlignment="Left" Height="216" Margin="10,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="209"/>
-        <TextBox x:Name="dimensionsTextBox" HorizontalAlignment="Left" Height="21" Margin="10,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="209"/>
+        <Button x:Name="generateProgramButton" Content="Generate" Margin="10,0,127,10" Click="onGenerateProgramButtonClick" Height="28" VerticalAlignment="Bottom"/>
+        <Button x:Name="saveButton" Content="Save" Margin="127,0,10,10" Click="onSaveButtonClick" Height="28" VerticalAlignment="Bottom"/>
+        <TextBox x:Name="programTextBox" Margin="10,102,10,43" TextWrapping="Wrap"/>
+        <TextBox x:Name="dimensionsTextBox" Height="21" Margin="10,76,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
         <Label x:Name="label" Content="Dimensions" HorizontalAlignment="Left" Height="26" Margin="10,45,0,0" VerticalAlignment="Top" Width="209"/>
         <RadioButton x:Name="rectRadioButton" Content="RadioButton" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True" Checked="onRectRadioButtonChecked"/>
         <RadioButton x:Name="circleRadioButton" Content="RadioButton" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Checked="onCircleRadioButtonChecked"/>
